FELIX-5306 Backward compatible