@@ -9,4 +9,4 @@ export LC_ALL=C
 # Confirm java version
 java -version
 
-exec java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom ${JAVA_OPTS} -jar /app.jar "$@"
+exec java -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=75.0 ${JAVA_OPTS} -jar /app.jar "$@"
